--- a/public/styles.css
+++ b/public/styles.css
@@ -28,7 +28,7 @@ html {
     flex-shrink: 0;
     padding: 10px;
     overflow-y: auto; /* 超出容器寬度時顯示縱向滾動條 */
-    padding-top: 60px; /* 讓 Sidebar 內的按鈕下移 */
+    padding-top: 10px; /* 讓 Sidebar 內的按鈕下移 */
 }
 
 /* 手機版樣式（螢幕寬度小於 768px） */
@@ -44,7 +44,7 @@ html {
     min-width: 120px; /* 限制最小寬度 */
     transition: width 0.3s ease-in-out;
     overflow-y: auto; /* 超出容器寬度時顯示縱向滾動條 */
-    padding-top: 60px; /* 讓 Sidebar 內的按鈕下移 */
+    padding-top: 10px; /* 讓 Sidebar 內的按鈕下移 */
   }
 }
 
@@ -61,7 +61,7 @@ html {
     min-width: 80px;
     transition: width 0.3s ease-in-out;
     overflow-y: auto; /* 超出容器寬度時顯示縱向滾動條 */
-    padding-top: 60px; /* 讓 Sidebar 內的按鈕下移 */
+    padding-top: 10px; /* 讓 Sidebar 內的按鈕下移 */
   }
 }
 
@@ -94,7 +94,7 @@ html {
 
 /* Toggle 按鈕樣式 */
 .sidebar-toggle {
-    position: fixed;
+    /* position: fixed; */
     top: 10px;
     left: 10px;
     background: black;
@@ -104,7 +104,7 @@ html {
     font-size: 18px;
     cursor: pointer;
     border-radius: 5px;
-    z-index: 1000; /* 確保在最上層 */
+    /*z-index: 1000;  確保在最上層 */
 }
 
 .context-menu {
@@ -184,4 +184,29 @@ html {
     max-height: 100%;
     width: auto;
     height: auto;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #f8f8f8;
+    border-bottom: 1px solid #ddd;
+}
+
+#folder-name {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+#favorite-button {
+    font-size: 24px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+#favorite-button.favorited {
+    color: gold;
 }
